<resources>
    <string name="app_name">MxRecyclerView</string>
    <string name="linear_layout">LinearLayout</string>
    <string name="grid_layout">GridLayout</string>
    <string name="staggered_grid_layout">StaggeredGridLayout</string>
    <string name="swip_refresh_layout">SwipRefreshRecyclerView</string>
    <string name="item_click">ItemClick</string>
    <string name="header">Header</string>
    <string name="divider">Divider</string>

    <string name="empty">no data</string>
    <string name="error">load failed,please pull to refresh again</string>
</resources>
