<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/linear_btn"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/linear_layout"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/grid_btn"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_margin="4dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/grid_layout"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/staggered_btn"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_margin="4dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/staggered_grid_layout"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/swip_refresh_btn"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_margin="4dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/swip_refresh_layout"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/item_click_btn"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_margin="4dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/item_click"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/header_btn"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_margin="4dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/header"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/divider_btn"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_margin="4dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:text="@string/divider"
        android:textColor="@android:color/white" />

</LinearLayout>
